--- a/main.html
+++ b/main.html
@@ -8,6 +8,16 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+<ol>
+        <li data-ns-test="shoppingList">Laptop</li>
+        <li data-ns-test="shoppingList">Smartphone</li>
+        <li data-ns-test="shoppingList">Wireless Headphones</li>
+    </ol>
+	    <ul>
+        <li data-ns-test="holidayList">Switzerland</li>
+        <li data-ns-test="holidayList">Japan</li>
+        <li data-ns-test="holidayList">New Zealand</li>
+    </ul>
     <script type="text/javascript" src="./script.js">
 </script>
 
